# rust-s3

./: .gitignore  .travis.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Config.toml  Makefile  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yaml  publish.yaml  rust.yml
aws-creds/: Cargo.toml  Makefile  README.md
aws-creds/src/: credentials.rs  error.rs  lib.rs
aws-region/: Cargo.toml  README.md
aws-region/src/: error.rs  lib.rs  region.rs
block_on/: Cargo.toml
block_on/src/: lib.rs  test.rs
doc/: simple_crud.html
examples/: async-std-backend.rs  gcs-tokio.rs  minio-tokio.rs  r2-tokio.rs  simple_crud.rs  sync-backend.rs  tokio-backend.rs
s3/: Cargo.toml  Makefile  README.md
s3/src/: blocking.rs  bucket.rs  bucket_ops.rs  client.rs  command.rs  credentials.rs  deserializer.rs  error.rs  errors.rs  lib.rs  post_policy.rs  put_object_request.rs  request.rs  request_async.rs  request_sync.rs  request_trait.rs  request_utils.rs  serde_types.rs  signing.rs  smol_request.rs  surf_request.rs  utils.rs
s3/src/request/: async_std_backend.rs  backend.rs  blocking.rs  mod.rs  request_trait.rs  tokio_backend.rs
s3/src/utils/: mod.rs  testing.rs  time_utils.rs
src/: bucket.rs  command.rs  credentials.rs  deserializer.rs  error.rs  lib.rs  region.rs  request.rs  serde_types.in.rs  serde_types.rs  signing.rs
