[package]
name = "aws-creds"
version = "0.30.0"
authors = ["Drazen Urch"]
description = "Tiny Rust library for working with Amazon IAM credential,s, supports `s3` crate"
repository = "https://github.com/durch/rust-s3"
readme = "README.md"
keywords = ["AWS", "S3", "Wasabi", "Minio", "Yandex"]
license = "MIT"
documentation = "https://durch.github.io/rust-s3/"
edition = "2018"

[lib]
name = "awscreds"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
dirs = "4"
rust-ini = "0.18"
attohttpc = { version = "0.19", default-features = false, features = ["json"], optional = true }
url = "2"
serde-xml-rs = "0.5"
serde = { version = "1.0.137", features = ["derive"] }

[features]
default = ["native-tls"]
http-credentials = ["attohttpc"]
native-tls = ["http-credentials", "attohttpc/tls"]
rustls-tls = ["http-credentials", "attohttpc/tls-rustls"]

[dev-dependencies]
env_logger = "0.9"
