[package]
name = "aws-creds"
version = "0.34.0"
authors = ["Drazen Urch"]
description = "Tiny Rust library for working with Amazon IAM credential,s, supports `s3` crate"
repository = "https://github.com/durch/rust-s3"
readme = "README.md"
keywords = ["AWS", "S3", "Wasabi", "Minio", "R2"]
license = "MIT"
documentation = "https://durch.github.io/rust-s3/"
edition = "2018"

[lib]
name = "awscreds"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
dirs = "4"
rust-ini = "0.18"
attohttpc = { version = "0.22", default-features = false, features = [
    "json",
], optional = true }
url = "2"
quick-xml = { version = "0.26.0", features = [ "serialize" ] }
serde = { version = "1", features = ["derive"] }
time = { version = "^0.3.6", features = ["serde", "serde-well-known"] }
log = "0.4"

[features]
default = ["native-tls"]
http-credentials = ["attohttpc"]
native-tls = ["http-credentials", "attohttpc/tls"]
native-tls-vendored = [ "http-credentials", "attohttpc/tls-vendored" ]
rustls-tls = ["http-credentials", "attohttpc/tls-rustls"]

[dev-dependencies]
env_logger = "0.9"
serde_json = "1"
