[package]
name = "aws-region"
version = "0.25.0"
authors = ["Drazen Urch"]
description = "Tiny Rust library for working with Amazon AWS regions, supports `s3` crate"
repository = "https://github.com/durch/rust-s3"
readme = "README.md"
keywords = ["Amazon", "AWS", "S3", "Wasabi", "Minio"]
license = "MIT"
documentation = "https://durch.github.io/rust-s3/"
edition = "2018"

[lib]
name = "awsregion"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1.0.137", features = ["derive"] }
