[package]
name = "aws-region"
version = "0.25.3"
authors = ["Drazen Urch"]
description = "Tiny Rust library for working with Amazon AWS regions, supports `s3` crate"
repository = "https://github.com/durch/rust-s3"
readme = "README.md"
keywords = ["Amazon", "AWS", "S3", "R2", "Minio"]
license = "MIT"
documentation = "https://durch.github.io/rust-s3/"
edition = "2018"

[lib]
name = "awsregion"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
